Update DT-Default ( skenario 1 - 2).ipynb

--- a/DT-Default ( skenario 1 - 2).ipynb
+++ b/DT-Default ( skenario 1 - 2).ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "key_norm = pd.read_csv('kamus_normalisasi.csv')\n",
+    "key_norm = pd.read_csv('kamus_normalisasi.csv', encoding='latin-1')\n",
     "\n",
     "def normalisasi(tweet):\n",
     "    tweet = ' '.join([key_norm[key_norm['singkat'] == word]['hasil'].values[0] \n",
